<resources>
    <string name="app_name">LoginRegister</string>
    <string name="profile">Profile</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
</resources>