<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="4"
    android:background="@color/blue"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">

        <ImageView
            android:layout_height="150dp"
            android:layout_width="150dp"
            android:src="@drawable/profile"
            android:contentDescription="@string/profile" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical"
        android:paddingHorizontal="10dp"
        android:background="@drawable/bg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp">

            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:id="@+id/login"
                android:background="@drawable/fillbtn"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="-20dp"/>

            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textColor="@color/blue"
                android:textStyle="bold"
                android:background="@drawable/btnbg"
                android:id="@+id/register"
                android:layout_marginStart="-20dp"
                android:layout_marginEnd="10dp"/>

        </LinearLayout>

    </LinearLayout>



</LinearLayout>