<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="4"
        android:background="@color/blue"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:layout_height="150dp"
                android:layout_width="150dp"
                android:src="@drawable/profile"
                android:contentDescription="@string/profile" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="vertical"
            android:paddingHorizontal="10dp"
            android:background="@drawable/bg">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp">

                <Button
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:textColor="@color/blue"
                    android:textStyle="bold"
                    android:id="@+id/login"
                    android:background="@drawable/btnbg"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="-20dp"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/register"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:background="@drawable/fillbtn"
                    android:id="@+id/register"
                    android:layout_marginStart="-20dp"
                    android:layout_marginEnd="10dp"
                    style="?android:attr/buttonBarButtonStyle" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:paddingHorizontal="10dp"
                android:orientation="vertical">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:background="@drawable/btnbg"
                    android:inputType="text"
                    android:padding="20dp"
                    android:drawableEnd="@drawable/ic_baseline_person_outline_24"
                    android:importantForAutofill="no" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:background="@drawable/btnbg"
                    android:inputType="textEmailAddress"
                    android:padding="20dp"
                    android:layout_marginTop="14dp"
                    android:drawableEnd="@drawable/ic_outline_email_24"
                    android:importantForAutofill="no" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:background="@drawable/btnbg"
                    android:inputType="textPassword"
                    android:padding="20dp"
                    android:layout_marginTop="14dp"
                    android:drawableEnd="@drawable/ic_outline_lock_24"
                    android:importantForAutofill="no" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/register"
                    android:background="@drawable/fillbtn"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:padding="20dp"
                    android:layout_marginTop="30dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:backgroundTint="@color/white"
                    android:foreground="@drawable/icons8_facebook_64"
                    android:foregroundGravity="center"/>

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:backgroundTint="@color/white"
                    android:layout_marginHorizontal="20dp"
                    android:foreground="@drawable/icons8_google_64"
                    android:foregroundGravity="center"/>

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:backgroundTint="@color/white"
                    android:foreground="@drawable/icons8_twitter_48"
                    android:foregroundGravity="center"/>


            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>